--- a/css/style.css
+++ b/css/style.css
@@ -27,7 +27,10 @@
     display: flex;
     align-items: center;
     justify-content: center;
-    position: relative;
+    position: fixed;
+    top: 0;
+    width: 100%;
+
 }
 
 /* Logo and image */
