--- a/css/phone.css
+++ b/css/phone.css
@@ -3,7 +3,7 @@
     flex-direction: row;
     justify-content: space-between;
     align-items: center;
-    height: 40px;
+    height: 10vh;
 }
 .nav-links{
     position: fixed;
