--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 /* CSS Variables */
 :root {
-    --navbar-height: 59px;
+    --navbar-height: 10vh;
 }
 
 /* Navbar */
@@ -30,6 +30,7 @@
     position: fixed;
     top: 0;
     width: 100%;
+    height: 10vh;
 
 }
 
@@ -124,6 +125,7 @@
     display: flex;
     align-items: center;
     justify-content: center;
+    perspective: 1000px;
 }
 
 #services .box {
@@ -133,6 +135,7 @@
     box-shadow: 2px 2px 8px grey;
     height:360px;
     width: 350px;
+    
 }
 
 #services .box img {
@@ -140,9 +143,30 @@
     display: block;
     width: 100%;
     border-radius: 23px 23px 0px 0px;
-    
 }
 
+.card{
+    transition: transform 1s;
+    transform-style: preserve-3d;
+ 
+}
+
+.card__face{
+    backface-visibility: hidden;
+}
+
+.card__face--back {
+    transform: rotateY( 180deg );
+}
+
+.card.is-flipped{
+    transform: rotateY(180deg);
+}
+
+.text{
+    text-align: center;
+    margin: -140px 0px;
+}
 
 /* Client section */
 #client {
