--- a/css/style.css
+++ b/css/style.css
@@ -205,7 +205,7 @@
 }
 
 footer {
-    background-color: black;
+    background-color: rgb(53, 54, 58);
     color: white;
     text-align: center;
     padding: 9px 20px;
